# Blog-Writing-Agent

./: .gitignore  Hierarchy-script.sh  README.md  blog_about_what_is_the_current_global_situation_concerning_ai_in_todays_world_ai_global_situation_ai_regulation_ai_overview.md  create_project.sh  idea.md  streamlit_app_1.py  test_bwa.py  test_bwa_backend.py  update_bwa_backend_1.py  web_research_engine.py
BWAgent/: README.md  (+2 more)
blog_agent_system/: Makefile  README.md  pyproject.toml
blog_agent_system/alembic/: env.py
blog_agent_system/docs/: Project File-Folder Hierarchy.txt  adr-001-orchestrator-choice.md  adr-002-memory-strategy.md  adr-003-llm-abstraction.md  idea.md  roadmap.md
blog_agent_system/scripts/: health_check.py  seed_db.py
blog_agent_system/src/: __init__.py
blog_agent_system/src/blog_agent_system/: __init__.py  cli.py  main.py
blog_agent_system/src/blog_agent_system/agents/: __init__.py  base.py  editor_agent.py  fact_checker_agent.py  image_agent.py  outline_agent.py  research_agent.py  seo_agent.py  writer_agent.py
blog_agent_system/src/blog_agent_system/api/: dependencies.py  router.py  schemas.py
blog_agent_system/src/blog_agent_system/config/: __init__.py  agents.yaml  llm_config.py  settings.py
blog_agent_system/src/blog_agent_system/core/: __init__.py  checkpoint.py  graph.py  orchestrator.py  state.py
blog_agent_system/src/blog_agent_system/llm/: __init__.py  anthropic_provider.py  factory.py  ollama_provider.py  openai_provider.py  provider.py  structured_output.py  token_manager.py
blog_agent_system/tests/: conftest.py
(+328 files in other folders)
